# opengl-bootstrap

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  Doxyfile
include/geometry/: Line.hpp  Rectangle.hpp  Surface.hpp
src/: CMakeLists.txt
src/geometry/: Line.cpp  Rectangle.cpp
tests/: CMakeLists.txt
tests/geometry/: RectangleTest.cpp
